<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoitem1"
    tools:context="com.agndesarrollos.pruebabolsiyo.DetailImageActivity">


    <ImageView
        android:id="@+id/BarraPrincipal_ImageView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/fondoitem1"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/NameView_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/blanco_transparente"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/BarraPrincipal_ImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/BarraPrincipal_ImageView" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btmenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BarraPrincipal_ImageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ImgPreview_imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/fondoimgprev"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <LinearLayout
                android:id="@+id/Tags_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/fondositemdetail"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TagTittle_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Text_Tags"
                    android:textColor="#7591FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/Tags_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ViewLikes_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/fondositemdetail"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/VistasT_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Text_Views"
                    android:textColor="#7591FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/Views_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/LikesT_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Text_Likes"
                    android:textColor="#7591FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/Likes_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>